outputs/tsp_constructive-constructive/ab-mcts-ahd/2025-09-24_14-22-01/evaluations/problem_eval-2582532850148007727_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance of immediate vs. potential distances, using a sigmoid function to smooth the transition between weights, and includes a probabilistic element to occasionally explore less optimal paths when few nodes remain.}
                                                                                                                                                                                                                              ^
SyntaxError: unmatched '}'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance of immediate vs. potential distances, using a sigmoid function to smooth the transition between weights, and includes a probabilistic element to occasionally explore less optimal paths when few nodes remain.}
                                                                                                                                                                                                                              ^
SyntaxError: unmatched '}'
